lintian (2.5.32) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/changes-file.{desc,pm}:
    + [NT] Downgrade backports-changes-missing to a wishlist (I) tag.
      Thanks to Vincent Cheng for the report.  (Closes: #785084)

  * debian/changelog:
    + [NT] Add missing list of new / removed tags to the
      entry for the previous release.

 -- Niels Thykier <niels@thykier.net>  Thu, 14 May 2015 09:11:05 +0200

lintian (2.5.31) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-intended-distribution
      - dbus-policy-excessively-broad
      - debian-pycompat-is-obsolete
      - debian-watch-file-accesses-pypi-over-http
      - debian-watch-file-unsupported-pypi-url
      - dep5-copyright-license-name-not-unique
      - dep5-file-paragraph-reference-header-paragraph
      - file-should-not-be-compressed
      - multiline-architecture-field
      - python-version-current-is-deprecated
      - uses-no-compression-for-control-tarball
      - uses-no-compression-for-data-tarball
      - xs-testsuite-header-in-debian-control
    + Removed:
      - bad-intended-distibution
      - compressed-objects.inv

  * checks/binaries.pm:
    + [BR] Do not tag with
      library-in-debug-or-profile-should-not-be-stripped
      when file add "not stripped, too many notes" to its
      output. Thanks to Jakub Wilk.  (Closes: #775760).
    + [AB] Ignore tEH and tEh for spelling-error-in-binary. (Closes:
      #782902; bug report and patch by Tomasz Buchert, thanks!)
  * checks/changelog-file.{desc,pm}:
    + [BR] Correct a typo on tag name and do not raise
      bad-intended-distribution if distribution is still
      set to UNRELEASED.  (Closes: #765344).
    + [NT] Apply patches from Ben Finney to permit quotes around
      the distribution name in the "to unstable" entries.
      (Closes: #784012)
  * checks/control-file.{desc,pm}:
    + [BR] Apply patch from Johannes Schauer in order
      to detect obsolete XS-Testsuite header.